feat: thekla4j-http - implement cookies and CONTENT_TYPE values